// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SButton.vue can be gold 1`] = `
<button class="button button--color-gold">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be green 1`] = `
<button class="button button--color-green">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be grey 1`] = `
<button class="button button--color-grey">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be ice 1`] = `
<button class="button button--color-ice">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be large 1`] = `
<button class="button button--size-large">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be magenta 1`] = `
<button class="button button--color-magenta">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be night 1`] = `
<button class="button button--color-night">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with gold 1`] = `
<button class="button button--color-gold-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with green 1`] = `
<button class="button button--color-green-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with grey 1`] = `
<button class="button button--color-grey-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with ice 1`] = `
<button class="button button--color-ice-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with magenta 1`] = `
<button class="button button--color-magenta-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with night 1`] = `
<button class="button button--color-night-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with red 1`] = `
<button class="button button--color-red-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with spartan_blue 1`] = `
<button class="button button--color-spartan_blue-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with turquoise 1`] = `
<button class="button button--color-turquoise-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be outlined with white 1`] = `
<button class="button button--color-white-outlined">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be red 1`] = `
<button class="button button--color-red">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be regular 1`] = `
<button class="button button--size-regular">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be small 1`] = `
<button class="button button--size-small">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be spartan_blue 1`] = `
<button class="button button--color-spartan_blue">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be turquoise 1`] = `
<button class="button button--color-turquoise">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can be white 1`] = `
<button class="button button--color-white">
  <!---->
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have a loading spinner 1`] = `
<button class="button button--loading"><span class="button__spinner"><sspinner></sspinner></span>
  <!----> Button Text
  <!----></button>
`;

exports[`SButton.vue can have an icon and no text 1`] = `
<button aria-label="Button" class="button button--icon-only">
  <!---->
  <sicon icon="activity" class="button__icon button__icon--left"></sicon>
  <!---->
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the left 1`] = `
<button class="button">
  <!---->
  <sicon icon="activity" class="button__icon button__icon--left"></sicon> Button Text
  <!---->
</button>
`;

exports[`SButton.vue can have an icon on the right 1`] = `
<button class="button">
  <!---->
  <!----> Button Text <sicon icon="activity" class="button__icon button__icon--right"></sicon></button>
`;

exports[`SButton.vue renders correctly 1`] = `
<button class="button">
  <!---->
  <!----> Button Text
  <!----></button>
`;
